--- a/changelog.html
+++ b/changelog.html
@@ -26,6 +26,7 @@
             </div>
             <div class="social-links">
                 <a href="https://raw.githubusercontent.com/trollm8/changelog/main/1.20.txt" target="_blank">changelog 1.20</a>
+                <a href="https://raw.githubusercontent.com/trollm8/trollmeight/main/changelog/1.21.txt" target="_blank">changelog 1.21</a>
             </div>
         </div>
     </div>
