--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,9 @@
                 <h1>trollm8's projects</h1>
             </div>
             <div class="social-links">
-                <a href="https://github.com/trollm8/javaruntime/tree/main" target="_blank">javaruntime</a>
+                               <a href="https://github.com/trollm8/javaruntime/tree/main" target="_blank">javaruntime</a>
+                                       <a href="https://github.com/is-not.cool/registration" target="_blank">is-not.cool</a>
+                
             </div>
         </div>
     </div>
